Fixed showcase spacing

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -7,6 +7,7 @@
   border-radius: 0.3rem;
   font-weight: $font-regular;
   transition: all 0.3s ease;
+  line-height: 1;
 
   &:hover {
     background-color: transparentize($color: $color-accent, $amount: 0.2);
